# ocypod

./: .dockerignore  Cargo.toml  Dockerfile
src/application/: manager.rs
src/models/: duration.rs
tests/: test_basic.rs
tests/support/: mod.rs
